--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "leanring material: https://medium.com/@kayodeniyi/simplest-react-app-setup-a74277b99e43",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "babel-node tools/server.js",
+    "wp": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/Theu/thisWillBeYourReact#readme",
   "dependencies": {
+    "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "redux": "^3.7.2",
@@ -27,12 +31,19 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.8",
+    "eventsource-polyfill": "^0.9.6",
+    "nodemon": "^1.14.11",
     "path": "^0.12.7",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.10.1"
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-dev-server": "^2.10.1",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
